Set up get project reports endpoint
