# server/src/api/routes/mod.ts
@@ -3,6 +3,7 @@ import { Router, type Request, type Response, type NextFunction } from 'express'
 import { banUser } from '#controllers/mod/ban-user.ts';
 import { clearProfile } from '#controllers/mod/clear-profile.ts';
 import { deleteProject } from '#controllers/mod/delete-project.ts';
+import { getProjectReports } from '#controllers/mod/get-project-reports.ts';
 import { unbanUser } from '#controllers/mod/unban-user.ts';
 import requiresLogin from '../middleware/authorization/requires-login.ts';
 import requiresModerator from '../middleware/authorization/requires-mod.ts';
@@ -30,5 +31,6 @@ router.patch('/clear-profile/:id/', authenticated(clearProfile));
 router.delete('/delete-project/:id/', authenticated(deleteProject));
 router.put('/ban-user/:googleId/', authenticated(banUser));
 router.delete('/unban-user/:googleId/', authenticated(unbanUser));
+router.get('/project-report/', authenticated(getProjectReports));
 
 export default router;
